update implementation of multi head in parallel

--- a/siglip.ipynb
+++ b/siglip.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMzLl4pMS95Mlg2VpNxHYpm",
+      "authorship_tag": "ABX9TyM/xTEx39g3T3U9YW+a80Wf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2086,7 +2086,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2113,6 +2113,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "!nvidia-smi"
       ],
       "metadata": {
@@ -2122,7 +2123,7 @@
         "id": "JEWKPU1ACCWk",
         "outputId": "6fd7cfca-4fe5-4aaa-c05c-f00e318aa256"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2168,7 +2169,7 @@
         "id": "EhJOYhZMB_H7",
         "outputId": "1970dd46-3ef9-4495-c80f-c0d04b3196c8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2193,7 +2194,7 @@
       "metadata": {
         "id": "DI0yW1LVCBFH"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2282,7 +2283,7 @@
         "id": "1o8DiqaqClRI",
         "outputId": "70f643ce-34b9-4b8e-c840-0e986efe285f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2477,7 +2478,7 @@
         "id": "oyEDZjwGC45x",
         "outputId": "d1e3d995-e939-4cf4-db48-727e20d1fb0d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2513,7 +2514,7 @@
         "id": "DKV-cr64HAxF",
         "outputId": "aa3af691-4e7e-4ceb-9855-5f7f0d34f327"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2560,7 +2561,7 @@
       "metadata": {
         "id": "wY-WKLxiKiR8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2575,7 +2576,7 @@
         "id": "EmGla6-mKo59",
         "outputId": "d97e39c9-35d9-4f7f-9c1c-a9b850e053c1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2617,7 +2618,7 @@
         "id": "xdibmenDHxXF",
         "outputId": "68cea855-9f55-42c0-ed3b-2efd866b3563"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2664,7 +2665,7 @@
         "id": "MkJbLZZnKeou",
         "outputId": "c192d2a0-3b40-4a52-8d1c-90991136ba99"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2716,7 +2717,7 @@
         "id": "0ScmXq9LLoJH",
         "outputId": "ca4e2af3-75dc-4ab8-935f-0bc9f02f8e28"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2788,7 +2789,7 @@
       "metadata": {
         "id": "2kgBMqkbL9NP"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2805,7 +2806,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2832,7 +2833,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3307,7 +3308,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3382,6 +3383,100 @@
       ],
       "metadata": {
         "id": "m6GMBAToQeYv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### processing all the attention head in parallel"
+      ],
+      "metadata": {
+        "id": "MRUp2Otwh7mo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "@dataclass\n",
+        "class SiglipVisionConfig:\n",
+        "    num_channels: int = 3\n",
+        "    image_size: int = 224\n",
+        "    patch_size: int = 16\n",
+        "    num_attention_heads: int = 12\n",
+        "    hidden_size: int = 768\n",
+        "    attention_dropout: float = 0.0\n",
+        "\n",
+        "class SiglipAttention(nn.Module):\n",
+        "    def __init__(self, config: SiglipVisionConfig):\n",
+        "        super().__init__()\n",
+        "        self.config = config\n",
+        "        self.embed_dim = config.hidden_size\n",
+        "        self.num_heads = config.num_attention_heads\n",
+        "        self.dropout = config.attention_dropout\n",
+        "\n",
+        "        self.k_proj = nn.Linear(self.embed_dim, self.embed_dim)\n",
+        "        self.v_proj = nn.Linear(self.embed_dim, self.embed_dim)\n",
+        "        self.q_proj = nn.Linear(self.embed_dim, self.embed_dim)\n",
+        "        self.out_proj = nn.Linear(self.embed_dim, self.embed_dim)\n",
+        "\n",
+        "    def forward(self, hidden_states):\n",
+        "        # the hidden states are the embeddings of the patches, so (batch_size, num_patches, embed_dim)\n",
+        "        B, T, C = hidden_states.shape\n",
+        "        q_states = self.q_proj(hidden_states)\n",
+        "        k_states = self.k_proj(hidden_states)\n",
+        "        v_states = self.v_proj(hidden_states)\n",
+        "\n",
+        "        q_states = q_states.view(B, T, self.num_heads, C // self.num_heads).transpose(1, 2)\n",
+        "        k_states = k_states.view(B, T, self.num_heads, C // self.num_heads).transpose(1, 2)\n",
+        "        v_states = v_states.view(B, T, self.num_heads, C // self.num_heads).transpose(1, 2)\n",
+        "\n",
+        "        attn_weights = (q_states @ k_states.transpose(-2, -1)) * (1.0 / math.sqrt(k_states.size(-1)))\n",
+        "        attn_weights = F.softmax(attn_weights, dim=-1).to(q_states.dtype)\n",
+        "        attn_weights = F.dropout(attn_weights, p=self.dropout, training=self.training)\n",
+        "        attn_outs = attn_weights @ v_states\n",
+        "        attn_outs = attn_outs.transpose(1, 2)\n",
+        "        attn_outs = attn_outs.reshape(B, T, C).contiguous()\n",
+        "        attn_outs = self.out_proj(attn_outs)\n",
+        "        return attn_outs\n",
+        "\n",
+        "batch_size = 1\n",
+        "num_patches = 196\n",
+        "embed_dim = 768\n",
+        "\n",
+        "hidden_states = torch.randn(batch_size, num_patches, embed_dim)\n",
+        "config = SiglipVisionConfig(\n",
+        "    attention_dropout=0.0,\n",
+        "    num_attention_heads=12,\n",
+        "    hidden_size=768\n",
+        ")\n",
+        "attention = SiglipAttention(config)\n",
+        "output = attention(hidden_states)\n",
+        "\n",
+        "print(f\"Input shape: {hidden_states.shape}\")\n",
+        "print(f\"Output shape: {output.shape}\")"
+      ],
+      "metadata": {
+        "id": "Pt9rvi5RhmCh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vlaZa-RBhmE1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "W_cCe3yxhmHX"
       },
       "execution_count": null,
       "outputs": []
